Fixed LXD and added Logging server connections

--- a/Attacks/WP/config.ini
+++ b/Attacks/WP/config.ini
@@ -1,12 +1,15 @@
 [ATTACKERINFO]
 ip = 192.168.100.5
-port = 61912
+port = 18577
 
 [VICTIMINFO]
 ip = 192.168.100.7
-port = 8080
+port = 80
 secure = False
 
 [GENERALINFO]
 exploit = 1
+host = 192.168.100.7
+port = 5555
+active = True
 
