--- a/Attacks/WP/config.ini
+++ b/Attacks/WP/config.ini
@@ -1,15 +1,15 @@
 [ATTACKERINFO]
 ip = 192.168.100.5
-port = 18577
+port = 42919
 
 [VICTIMINFO]
 ip = 192.168.100.7
-port = 80
+port = 8080
 secure = False
 
 [GENERALINFO]
-exploit = 1
-host = 192.168.100.7
-port = 5555
-active = True
+exploit = 3
+host = 
+port = 0
+active = False
 
