Added flags, functioning repeat mode for docker escape

--- a/Attacks/WP/config.ini
+++ b/Attacks/WP/config.ini
@@ -1,6 +1,6 @@
 [ATTACKERINFO]
 ip = 192.168.100.5
-port = 65330
+port = 15841
 
 [VICTIMINFO]
 ip = 192.168.100.7
@@ -9,7 +9,7 @@ secure = False
 
 [GENERALINFO]
 exploit = 3
-host = 
-port = 0
-active = False
+host = 192.168.100.7
+port = 5555
+active = True
 
