SSH Bruteforce, repeat and single mode

--- a/Attacks/WP/config.ini
+++ b/Attacks/WP/config.ini
@@ -1,15 +1,20 @@
 [ATTACKERINFO]
 ip = 192.168.100.5
-port = 3755
+port = 47900
 
 [VICTIMINFO]
 ip = 192.168.100.7
-port = 8080
+port = 80
 secure = False
+ssh_user = 
+ssh_port = 22
 
 [GENERALINFO]
 exploit = 3
 host = 192.168.100.7
 port = 5555
 active = True
+has_ssh_user = False
+wordlist = /usr/share/wordlists/rockyou.txt
+default_ssh = True
 
