Fixed https connections

--- a/Attacks/WP/config.ini
+++ b/Attacks/WP/config.ini
@@ -1,24 +1,24 @@
 [ATTACKERINFO]
 ip = 192.168.100.5
-port = 22383
+port = 5114
 
 [VICTIMINFO]
 ip = 192.168.100.7
 port = 80
 secure = False
 ssh_user = 
-ftp_user = 
+ftp_user = vagrant
 ssh_port = 22
 ftp_port = 21
 
 [GENERALINFO]
-exploit = 1
+exploit = 5
 host = 192.168.100.7
 port = 5555
 active = True
 has_ssh_user = False
-has_ftp_user = False
-wordlist = /usr/share/wordlists/rockyou.txt
+has_ftp_user = True
+wordlist = /home/vagrant/Desktop/IDS-Dataset/Attacks/WP/t.txt
 default_ssh = True
 default_ftp = True
 
