Script can now execute and configure for RFI module

--- a/Attacks/WP/config.ini
+++ b/Attacks/WP/config.ini
@@ -1,24 +1,25 @@
 [ATTACKERINFO]
 ip = 192.168.100.5
-port = 5114
+port = 44879
 
 [VICTIMINFO]
 ip = 192.168.100.7
 port = 80
 secure = False
 ssh_user = 
-ftp_user = vagrant
+ftp_user = 
 ssh_port = 22
 ftp_port = 21
+file_inclusion_path = /file_inclusion.php?file=
 
 [GENERALINFO]
-exploit = 5
-host = 192.168.100.7
-port = 5555
-active = True
+exploit = 6
+host = 
+port = 0
+active = False
 has_ssh_user = False
-has_ftp_user = True
-wordlist = /home/vagrant/Desktop/IDS-Dataset/Attacks/WP/t.txt
+has_ftp_user = False
+wordlist = /usr/share/wordlists/rockyou.txt
 default_ssh = True
 default_ftp = True
 
