Added syscall logging to File Inclusion

--- a/Attacks/WP/config.ini
+++ b/Attacks/WP/config.ini
@@ -1,6 +1,6 @@
 [ATTACKERINFO]
 ip = 192.168.100.5
-port = 60604
+port = 39492
 
 [VICTIMINFO]
 ip = 192.168.100.7
@@ -14,9 +14,9 @@ file_inclusion_path = /file_inclusion.php?file=
 
 [GENERALINFO]
 exploit = 6
-host = 
-port = 0
-active = False
+host = 192.168.100.7
+port = 5555
+active = True
 has_ssh_user = False
 has_ftp_user = False
 wordlist = /usr/share/wordlists/rockyou.txt
