Added ReverseShell logging

--- a/Attacks/WP/config.ini
+++ b/Attacks/WP/config.ini
@@ -1,6 +1,6 @@
 [ATTACKERINFO]
 ip = 192.168.100.5
-port = 39492
+port = 32283
 
 [VICTIMINFO]
 ip = 192.168.100.7
@@ -10,10 +10,10 @@ ssh_user =
 ftp_user = 
 ssh_port = 22
 ftp_port = 21
-file_inclusion_path = /file_inclusion.php?file=
+file_inclusion_path = 
 
 [GENERALINFO]
-exploit = 6
+exploit = 7
 host = 192.168.100.7
 port = 5555
 active = True
