Added the rest of the files for victim setup

--- a/Attacks/WP/config.ini
+++ b/Attacks/WP/config.ini
@@ -1,10 +1,10 @@
 [ATTACKERINFO]
 ip = 192.168.100.5
-port = 14003
+port = 57659
 
 [VICTIMINFO]
 ip = 192.168.100.7
-port = 80
+port = 8080
 secure = False
 ssh_user = 
 ftp_user = 
@@ -13,10 +13,10 @@ ftp_port = 21
 file_inclusion_path = 
 
 [GENERALINFO]
-exploit = 2
-host = 192.168.100.7
-port = 5555
-active = True
+exploit = 3
+host = 
+port = 0
+active = False
 has_ssh_user = False
 has_ftp_user = False
 wordlist = /usr/share/wordlists/rockyou.txt
