Fixed issues when building victim with machine, all attacks working, Docker might need extra cmd

--- a/Attacks/WP/config.ini
+++ b/Attacks/WP/config.ini
@@ -1,10 +1,10 @@
 [ATTACKERINFO]
 ip = 192.168.100.5
-port = 31854
+port = 9564
 
 [VICTIMINFO]
 ip = 192.168.100.8
-port = 8080
+port = 80
 secure = False
 ssh_user = 
 ftp_user = 
@@ -13,10 +13,10 @@ ftp_port = 21
 file_inclusion_path = 
 
 [GENERALINFO]
-exploit = 3
-host = 
-port = 0
-active = False
+exploit = 2
+host = 192.168.100.8
+port = 5555
+active = True
 has_ssh_user = False
 has_ftp_user = False
 wordlist = /usr/share/wordlists/rockyou.txt
